--- a/resources/stylesheets/style.scss
+++ b/resources/stylesheets/style.scss
@@ -1,74 +1,5 @@
-@import '../vendors/bootstrap/scss/bootstrap';
-
-*{
-    margin: 0;
-    padding: 0;
-    //box-sizing: border-box;
-}
-
-
-body{
-    font-family: 'Titillium Web', sans-serif;
-    background: #eeeeee;
-
-    @include media-breakpoint-down(md){
-        background: red;
-    }
-}
-
-
-.block{
-    background: #cfcfcf;
-    margin-bottom: 4rem;
-    flex-direction: row;
-
-    img{
-        width: 100%;
-        height: auto;
-    }
-
-    h2{
-      margin-bottom: 2rem;  
-    }
-
-    a{
-        text-decoration: none;
-    }
-
-    #htmlLb{
-        color: #e44d26;
-    }
-
-    #cssLb{
-        color: #264de4;
-    }
-
-    #jsLb{
-        color: #f7df1e;
-    }
-
-    #phpLb{
-        color: #9211c8;
-    }
-
-    p{
-        line-height: 1.4;
-        font-size: 1.2rem;
-        margin-bottom: 0;
-    }
-
-    &>div:nth-child(even){
-        padding: 1rem 2rem;
-    }
-}
-
-.block>div:nth-child(odd){
-    padding: 0;
-}
-
-.block:nth-child(even){
-    order: 2;
-}
-
-
-
+@import
+'../vendors/bootstrap/scss/bootstrap',
+'../stylesheets/0-base/typography.scss',
+'../stylesheets/1-layout/layout.scss',
+'../stylesheets/2-components/navigation.scss';
