--- a/resources/stylesheets/2-components/_navigation.scss
+++ b/resources/stylesheets/2-components/_navigation.scss
@@ -19,7 +19,7 @@ nav{
                 padding-left: .8rem;
 
                 .nav-link.active, .nav-link:hover{
-                        color: rgb(137, 35, 255) !important;
+                        color: $white-text-color;
                 }
             }
            
