--- a/resources/stylesheets/style.scss
+++ b/resources/stylesheets/style.scss
@@ -1,5 +1,7 @@
 @import
 '../vendors/bootstrap/scss/bootstrap',
-'../stylesheets/0-base/typography.scss',
-'../stylesheets/1-layout/layout.scss',
-'../stylesheets/2-components/navigation.scss';
+'../stylesheets/0-base/utilities',
+'../stylesheets/0-base/_typography.scss',
+'../stylesheets/1-layout/_layout.scss',
+'../stylesheets/2-components/_navigation.scss',
+'../stylesheets/2-components/_buttons.scss';
