--- a/resources/stylesheets/style.css
+++ b/resources/stylesheets/style.css
@@ -9875,14 +9875,28 @@ h3 {
     border-color: #dee2e6;
   }
 }
+.enable-animation {
+  -webkit-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 0.6s;
+  transition-duration: 0.6s;
+  -webkit-transition-timing-function: ease;
+  transition-timing-function: ease;
+}
+
 * {
   margin: 0;
   padding: 0;
+  font-size: medium;
+}
+@media (min-width: 768px) {
+  * {
+    font-size: large;
+  }
 }
 
 body {
   font-family: "Titillium Web", sans-serif;
-  font-size: large;
   line-height: 1.5;
   background: #eeeeee;
 }
@@ -9893,8 +9907,24 @@ body {
 }
 
 [id=titleContainer] {
-  position: absolute;
-  bottom: 50px;
+  position: relative;
+  top: 50vh;
+  color: #e7e7e7;
+}
+[id=titleContainer] .social-links {
+  margin-top: 2rem;
+}
+[id=titleContainer] .social-links a:first-of-type {
+  padding-left: 0;
+  margin-left: 0;
+}
+[id=titleContainer] .social-links a {
+  display: inline-block;
+  padding: 0 1rem;
+  margin: 0 0.5rem;
+}
+[id=titleContainer] .social-links i {
+  font-size: 3rem;
   color: #e7e7e7;
 }
 
@@ -9913,7 +9943,94 @@ nav.navbar-dark .navbar-nav .nav-item {
   padding-left: 0.8rem;
 }
 nav.navbar-dark .navbar-nav .nav-item .nav-link.active, nav.navbar-dark .navbar-nav .nav-item .nav-link:hover {
-  color: #8923ff !important;
+  color: #e7e7e7;
+}
+
+.btn-an {
+  display: inline-block;
+  text-align: center;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 45px;
+  letter-spacing: 0.1rem;
+  margin: 0 0 2em;
+  max-width: 160px;
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 100%;
+}
+.btn-an:hover {
+  text-decoration: none;
+}
+
+/* -------------- Button 1 --------------- */
+.btn-1 {
+  background: #4a1fb1;
+  font-weight: 100;
+}
+.btn-1 svg {
+  height: 45px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+.btn-1 rect {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 2;
+  stroke-dasharray: 422, 0;
+  transition: all 0.35s linear;
+}
+
+.btn-1:hover {
+  background: rgba(77, 32, 184, 0);
+  color: #e7e7e7;
+  font-weight: 900;
+  letter-spacing: 0.2rem;
+}
+.btn-1:hover rect {
+  stroke-width: 5;
+  stroke-dasharray: 15, 310;
+  stroke-dashoffset: 48;
+  transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+/* -------------- Button 2 --------------- */
+.btn-2:hover,
+.btn-2:active {
+  letter-spacing: 0.3rem;
+  color: white;
+}
+
+.btn-2:after,
+.btn-2:before {
+  backface-visibility: hidden;
+  border: 1px solid rgba(255, 255, 255, 0);
+  bottom: 0px;
+  content: " ";
+  display: block;
+  margin: 0 auto;
+  position: relative;
+  transition: all 280ms ease-in-out;
+  width: 0;
+}
+
+.btn-2:hover:after,
+.btn-2:hover:before {
+  backface-visibility: hidden;
+  border-color: #fff;
+  transition: width 350ms ease-in-out;
+  width: 100%;
+}
+
+.btn-2:hover:before {
+  bottom: auto;
+  top: 0;
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
