Add overview image boxes and youtube embedded video player

--- a/resources/stylesheets/0-base/_typography.scss
+++ b/resources/stylesheets/0-base/_typography.scss
@@ -15,10 +15,16 @@
 
 body{
     font-family: 'Titillium Web', sans-serif;
-
-
     line-height: 1.5;
-    background: #eeeeee;
+    background: #f5f5f5;
+}
+
+h2{
+    font-size: 3rem;
+}
+
+p{
+    font-size: 1.3rem;
 }
 
 
