--- a/resources/stylesheets/style.scss
+++ b/resources/stylesheets/style.scss
@@ -1,7 +1,9 @@
 @import
 '../vendors/bootstrap/scss/bootstrap',
 '../stylesheets/0-base/utilities',
-'../stylesheets/0-base/_typography.scss',
-'../stylesheets/1-layout/_layout.scss',
-'../stylesheets/2-components/_navigation.scss',
-'../stylesheets/2-components/_buttons.scss';
+'../stylesheets/0-base/_typography',
+'../stylesheets/1-layout/_layout',
+'../stylesheets/1-layout/footer',
+'../stylesheets/2-components/_navigation',
+'../stylesheets/2-components/_modules',
+'../stylesheets/2-components/_buttons';
