--- a/resources/stylesheets/2-components/_navigation.scss
+++ b/resources/stylesheets/2-components/_navigation.scss
@@ -7,6 +7,7 @@ nav{
         text-transform: uppercase !important;
         font-weight: 700;
         letter-spacing: .1rem;
+        padding: 0.25rem 1rem;
     }
 
     .navbar-brand img{
@@ -17,6 +18,10 @@ nav{
         .navbar-nav{
             .nav-item{
                 padding-left: .8rem;
+
+                .nav-link{
+                    font-size: 0.9rem;
+                }
 
                 .nav-link.active, .nav-link:hover{
                         color: $white-text-color;
