--- a/resources/stylesheets/style.css
+++ b/resources/stylesheets/style.css
@@ -9884,6 +9884,11 @@ h3 {
   transition-timing-function: ease;
 }
 
+.border-rounded {
+  border: 4px solid #fff;
+  border-radius: 50%;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9898,11 +9903,18 @@ h3 {
 body {
   font-family: "Titillium Web", sans-serif;
   line-height: 1.5;
-  background: #eeeeee;
+  background: #f5f5f5;
+}
+
+h2 {
+  font-size: 3rem;
+}
+
+p {
+  font-size: 1.3rem;
 }
 
 .full-size-container {
-  width: 100vw;
   height: 100vh;
 }
 
@@ -9912,7 +9924,7 @@ body {
   color: #e7e7e7;
 }
 [id=titleContainer] .social-links {
-  margin-top: 2rem;
+  margin-top: 3.5rem;
 }
 [id=titleContainer] .social-links a:first-of-type {
   padding-left: 0;
@@ -9928,6 +9940,14 @@ body {
   color: #e7e7e7;
 }
 
+footer {
+  background-color: #222222;
+  color: white;
+}
+footer p {
+  font-size: 0.8rem;
+}
+
 nav.bg-dark {
   background-color: rgba(38, 42, 46, 0.85) !important;
 }
@@ -9935,6 +9955,7 @@ nav.navbar {
   text-transform: uppercase !important;
   font-weight: 700;
   letter-spacing: 0.1rem;
+  padding: 0.25rem 1rem;
 }
 nav .navbar-brand img {
   height: 1.5rem;
@@ -9942,20 +9963,109 @@ nav .navbar-brand img {
 nav.navbar-dark .navbar-nav .nav-item {
   padding-left: 0.8rem;
 }
+nav.navbar-dark .navbar-nav .nav-item .nav-link {
+  font-size: 0.9rem;
+}
 nav.navbar-dark .navbar-nav .nav-item .nav-link.active, nav.navbar-dark .navbar-nav .nav-item .nav-link:hover {
   color: #e7e7e7;
+}
+
+.content-box {
+  display: block;
+  flex: unset;
+  position: relative;
+  display: flex;
+  width: 100%;
+  max-width: 500px;
+  padding: 0;
+  margin-top: 1.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+  box-shadow: 10px 10px 10px grey;
+}
+@media (min-width: 768px) {
+  .content-box {
+    flex: 0 0 32%;
+    margin: 0;
+  }
+}
+.content-box img {
+  transition: transform 0.5s, filter 1.5s ease-in-out;
+  filter: grayscale(1);
+  width: 100%;
+}
+.content-box .text-content {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #e7e7e7;
+  text-align: center;
+}
+.content-box .text-content h3 {
+  text-shadow: 2px 2px 2px black;
+}
+.content-box:hover img {
+  filter: grayscale(0);
+  transform: scale(1.1);
+}
+.content-box:hover .text-content {
+  color: #fff;
+}
+
+.content-box:first-child {
+  margin-top: 0;
+}
+
+/*--- Fixed Background Image --*/
+figure {
+  position: relative;
+  width: 100%;
+  height: 500px;
+  margin: 0 !important;
+}
+figure .fixed-wrap {
+  clip: rect(0, auto, auto, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+figure [id=fixed] {
+  background-image: url("../images/drawing.jpg");
+  position: fixed;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  will-change: transform;
+}
+
+/* Youtube */
+[id=youtube] {
+  box-shadow: 10px 10px 10px grey;
 }
 
 .btn-an {
   display: inline-block;
   text-align: center;
-  color: #fff;
+  color: #e7e7e7;
   cursor: pointer;
   font-size: 1.2rem;
   font-weight: 400;
   line-height: 45px;
   letter-spacing: 0.1rem;
-  margin: 0 0 2em;
   max-width: 160px;
   position: relative;
   text-decoration: none;
@@ -9988,7 +10098,7 @@ nav.navbar-dark .navbar-nav .nav-item .nav-link.active, nav.navbar-dark .navbar-
 
 .btn-1:hover {
   background: rgba(77, 32, 184, 0);
-  color: #e7e7e7;
+  color: #fff;
   font-weight: 900;
   letter-spacing: 0.2rem;
 }
