--- a/resources/stylesheets/1-layout/_footer.scss
+++ b/resources/stylesheets/1-layout/_footer.scss
@@ -1,5 +1,5 @@
 footer{
-    background-color: #222222;
+    background-color: $dark-background-color;
     color: white;
     p{
         font-size: 0.8rem;
