--- a/resources/stylesheets/style.css
+++ b/resources/stylesheets/style.css
@@ -9889,6 +9889,17 @@ h3 {
   border-radius: 50%;
 }
 
+.position-absolute-top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.z-index-1 {
+  z-index: 1;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9923,8 +9934,18 @@ p {
   top: 50vh;
   color: #e7e7e7;
 }
+@media (max-width: 575.98px) {
+  [id=titleContainer] {
+    top: 12vh;
+    text-align: center;
+  }
+}
 [id=titleContainer] .social-links {
-  margin-top: 3.5rem;
+  margin-top: 5rem;
+}
+[id=titleContainer] .social-links h2 {
+  font-family: "Pacifico", cursive;
+  font-size: 1.5rem;
 }
 [id=titleContainer] .social-links a:first-of-type {
   padding-left: 0;
@@ -9932,12 +9953,38 @@ p {
 }
 [id=titleContainer] .social-links a {
   display: inline-block;
-  padding: 0 1rem;
+  padding: 1rem 1rem;
   margin: 0 0.5rem;
+}
+@media (min-width: 992px) {
+  [id=titleContainer] .social-links a {
+    margin: 0 1rem;
+  }
 }
 [id=titleContainer] .social-links i {
   font-size: 3rem;
   color: #e7e7e7;
+}
+
+.language-flag {
+  position: absolute;
+  left: 200px;
+  border: 2px solid white;
+}
+
+[id=contact] {
+  border-top: 2px solid #222222;
+  position: relative;
+}
+[id=contact]::before {
+  position: absolute;
+  top: 0;
+  right: 7%;
+  content: "";
+  width: 40px;
+  height: 80px;
+  background-color: #222222;
+  box-shadow: 3px 3px 5px grey;
 }
 
 footer {
@@ -10066,7 +10113,7 @@ figure [id=fixed] {
   font-weight: 400;
   line-height: 45px;
   letter-spacing: 0.1rem;
-  max-width: 160px;
+  max-width: 220px;
   position: relative;
   text-decoration: none;
   text-transform: uppercase;
