Add changes to about me section including vita
This commit changes the name of the contact section to "about me". This new section now contains an unordered list with applied css styles and aos animations.

--- a/resources/stylesheets/0-base/_utilities.scss
+++ b/resources/stylesheets/0-base/_utilities.scss
@@ -1,6 +1,7 @@
 $white-text-color: #e7e7e7;
 $standard-box-shadow: 10px 10px 10px grey;
 $dark-background-color: #222222;
+$dark-gradient-color: #4a1fb1;
 
 .enable-animation{
     -webkit-transition-property: all;
