--- a/resources/stylesheets/2-components/_buttons.scss
+++ b/resources/stylesheets/2-components/_buttons.scss
@@ -20,7 +20,7 @@
 
 /* -------------- Button 1 --------------- */
 .btn-1 {
-    background: darken(rgb(77, 32, 184), 1.5%);
+    background: darken( $dark-gradient-color, 1.5%);
     font-weight: 100;
     
     svg {
@@ -87,4 +87,39 @@
   bottom: auto;
   top: 0;
   width: 100%;
+}
+
+/* -------------- Button 3 --------------- */
+
+.btn-3 {
+  background-color: $dark-gradient-color;
+  border: 1px solid;
+  overflow: hidden;
+  position: relative;
+  
+  span {
+    z-index: 20;
+  }
+  
+  &:after {
+    background: #fff;
+    content: "";
+    height: 155px;
+    left: -75px;
+    opacity: .2;
+    position: absolute;
+    top: -50px;
+    transform: rotate(35deg);
+    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+    width: 50px;
+    z-index: 10;
+  }
+}
+
+.btn-3:hover {
+  
+  &:after {
+    left: 120%;
+    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
 }
