--- a/resources/stylesheets/2-components/_modules.scss
+++ b/resources/stylesheets/2-components/_modules.scss
@@ -3,7 +3,7 @@
     display: block;
     flex: unset;
 
-    @include media-breakpoint-up(md){
+    @include media-breakpoint-up(lg){
         flex: 0 0 32%;
         margin:0;
     }
