--- a/resources/stylesheets/1-layout/_footer.scss
+++ b/resources/stylesheets/1-layout/_footer.scss
@@ -1,15 +1,57 @@
 footer{
     background-color: $dark-background-color;
     color: white;
-    p{
-        font-size: 0.8rem;
+    padding-bottom: 1rem;
+
+    hr{
+        background-color: $white-text-color;
+        position: relative;
+        left: 20%;
+        width: 60%;
+        right: 20%;
+        margin: 1.5rem 0;
     }
 
-    [id="impressum"]{
+    [id="imprint"]{
         border-top: 2px solid $white-text-color;
         margin-top: 2rem;
         padding-top: 2rem;
+
+        /*
+        @include media-breakpoint-up(lg){
+            text-align: unset;
+        }
+
         text-align: center;
+
+        */
+        dl{
+
+            @include media-breakpoint-up(md){
+                display: flex;
+                justify-content: space-between;
+                flex-wrap: nowrap;
+
+                *+dt{
+                    margin-left: 1rem;
+                }
+            }
+
+            @include media-breakpoint-up(lg){
+                justify-content: flex-end;
+
+                *+dt{
+                    margin-left: 2rem;
+                }
+            }
+
+            
+            dd{
+                padding-left: .5rem;
+            }
+
+            text-align: center;
+        }
     }
 }
 
