--- a/resources/stylesheets/0-base/_utilities.scss
+++ b/resources/stylesheets/0-base/_utilities.scss
@@ -1,8 +1,3 @@
-$white-text-color: #e7e7e7;
-$standard-box-shadow: 10px 10px 10px grey;
-$dark-background-color: #222222;
-$dark-gradient-color: #4a1fb1;
-
 .enable-animation{
     -webkit-transition-property: all;
     transition-property: all;
@@ -26,4 +21,14 @@ $dark-gradient-color: #4a1fb1;
 
 .z-index-1{
     z-index: 1;
+}
+
+.background-light{
+    background-color: $light-background-color;
+}
+
+.max-container{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 2000px;
 }
